# DjangoRESTAPI

./: pyproject.toml
escola/: admin.py  serializer.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py
setup/: settings.py  urls.py
