[tool.poetry]
name = "djangorestapi"
version = "0.1.0"
description = ""
authors = ["Akim Gomes <ak-gomes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.4"
django = "3.0.7"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
